--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "0.0.51",
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "^1.6.5",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -21,7 +23,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "autoprefixer": "^7.2.5",
+    "bootstrap": "v4.0.0-beta.2",
+    "browserslist": "^2.11.3",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
